Modify images and text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/protein-shake.html">Protein Shake</a> <a href="./recipes/chicken-breast.html">Chicken Breast</a> <a href="./recipes/steamed-broccoli.html">Steamed Brocolli</a>
+    <a href="./recipes/protein-shake.html">Protein Shake</a> <a href="./recipes/chicken-breast.html">Chicken Breast</a> <a href="./recipes/steamed-broccoli.html">Steamed Broccoli</a>
 </body>
 </html>
